# rza1-minimal

./: README.md  meson.build  meson_options.txt
cross-file/: gr-lychee.ini  gr-peach.ini  native-rza1.ini  rza1.ini
src/: main.c  meson.build
src/native-rza1/: board.h  gpio.c  gpio.h  gr-lychee.ld  gr-peach.ld  maths_utils.c  meson.build  native-rza1.ld  sdcard.c  sdcard.h
src/native-rza1/asm/: initsect.S  irq.S  irqfiq_handler.S  l1_cache_init.S  l1_cache_operation.S  reset_handler.S  ttb_init.S  vbar_init.S  vector_mirrortable.S  vector_table.S  vfp_init_asm.S
src/native-rza1/common/inc/: cache.h  command.h  dev_drv.h  iodefine.h  led.h  main.h  peripheral_init_basic.h  port_init.h  r_typedefs.h  resetprg.h  rza_io_regrw.h  sample_dmac.h  sample_dmac_chext.h  sample_flctl.h  sample_main.h  sample_mtu2.h  sample_riic.h  sample_rspi.h  sample_scif_sync.h  sio_char.h  stb_init.h  stdint.h  unused.h
src/native-rza1/common/inc/iobitmasks/: bsc_iobitmask.h  cpg_iobitmask.h  dmac_iobitmask.h  flctl_iobitmask.h  gpio_iobitmask.h  intc_iobitmask.h  mtu2_iobitmask.h  ostm_iobitmask.h  riic_iobitmask.h  rspi_iobitmask.h  scif_iobitmask.h
src/native-rza1/common/inc/iodefines/: adc_iodefine.h  bsc_iodefine.h  ceu_iodefine.h  cpg_iodefine.h  disc_iodefine.h  dmac_iodefine.h  dvdec_iodefine.h  ether_iodefine.h  flctl_iodefine.h  gpio_iodefine.h  ieb_iodefine.h  inb_iodefine.h  intc_iodefine.h  irda_iodefine.h  jcu_iodefine.h  l2c_iodefine.h  lin_iodefine.h  lvds_iodefine.h  mlb_iodefine.h  mmc_iodefine.h  mtu2_iodefine.h  ostm_iodefine.h  pfv_iodefine.h  pwm_iodefine.h  riic_iodefine.h  romdec_iodefine.h  rscan0_iodefine.h  rspi_iodefine.h  rtc_iodefine.h  scif_iodefine.h  scim_iodefine.h  scux_iodefine.h  sdg_iodefine.h  spdif_iodefine.h  spibsc_iodefine.h  ssif_iodefine.h  usb20_iodefine.h  vdc5_iodefine.h  wdt_iodefine.h
src/native-rza1/common/src/: sections.c  siochar.c  syscalls.c
src/native-rza1/common/src/board_settings/: port_init.c  stb_init.c
src/native-rza1/common/src/common_settings/: cache.c  l2_cache_init.c  resetprg.c  rza_io_regrw.c  siorw.c
src/native-rza1/common/src/drivers/bsc/bsc_driver/: bsc.c
src/native-rza1/common/src/drivers/bsc/inc/: devdrv_bsc.h
src/native-rza1/common/src/drivers/bsc/userdef/: bsc_userdef.c
src/native-rza1/common/src/drivers/flctl/flctl_driver/: flctl.c
src/native-rza1/common/src/drivers/flctl/inc/: devdrv_flctl.h
src/native-rza1/common/src/drivers/flctl/userdef/: flctl_userdef.c
src/native-rza1/common/src/drivers/intc/inc/: devdrv_intc.h  intc_handler.h
src/native-rza1/common/src/drivers/intc/intc_driver/: intc.c  intc_handler.c
src/native-rza1/common/src/drivers/intc/userdef/: intc_userdef.c
src/native-rza1/common/src/drivers/mtu2_pwm/inc/: devdrv_mtu2_pwm1.h
src/native-rza1/common/src/drivers/mtu2_pwm/mtu2_pwm_driver/: mtu2_pwm1.c
src/native-rza1/common/src/drivers/mtu2_pwm/userdef/: mtu2_pwm1_userdef.c
src/native-rza1/common/src/drivers/ostm/inc/: devdrv_ostm.h
src/native-rza1/common/src/drivers/ostm/ostm_driver/: ostm.c
src/native-rza1/common/src/drivers/ostm/userdef/: ostm_userdef.c
src/native-rza1/common/src/drivers/riic/inc/: devdrv_riic.h  riic_rskrza1h.h
src/native-rza1/common/src/drivers/riic/riic_driver/: riic.c
src/native-rza1/common/src/drivers/riic/userdef/: riic_rskrza1h.c  riic_userdef.c
src/native-rza1/common/src/drivers/rspi/inc/: devdrv_rspi.h
src/native-rza1/common/src/drivers/rspi/rspi_driver/: rspi.c
src/native-rza1/common/src/drivers/rspi/userdef/: rspi_userdef.c
src/native-rza1/common/src/drivers/scif_sync/inc/: devdrv_scif_sync.h
src/native-rza1/common/src/drivers/scif_sync/scif_sync_driver/: scif_sync.c
src/native-rza1/common/src/drivers/scif_sync/userdef/: scif_sync_userdef.c
src/native-rza1/common/src/drivers/scif_uart/inc/: devdrv_scif_uart.h
src/native-rza1/common/src/drivers/scif_uart/scif_uart_driver/: scif_uart.c
src/native-rza1/common/src/drivers/scif_uart/userdef/: scif_uart_userdef.c
src/native-rza1/common/src/samples/: sample_main.c  sample_main_cmdlist.c
src/native-rza1/common/src/samples/command/: command_main.c
src/native-rza1/common/src/samples/sample_dmac/: sample_dmac_chext.c  sample_dmac_cmdlist.c  sample_dmac_command_auto_req.c  sample_dmac_command_ext_req.c  sample_dmac_command_peri_req.c  sample_dmac_common.c  sample_dmac_main.c
src/native-rza1/common/src/samples/sample_flctl/: sample_flctl_cmdlist.c  sample_flctl_command.c  sample_flctl_main.c
src/native-rza1/common/src/samples/sample_mtu2_pwm/: sample_mtu2_pwm1_command.c  sample_mtu2_pwm_cmdlist.c  sample_mtu2_pwm_main.c
src/native-rza1/common/src/samples/sample_riic/: sample_riic_cmdlist.c  sample_riic_command.c  sample_riic_eep.c  sample_riic_interrupt.c  sample_riic_main.c
src/native-rza1/common/src/samples/sample_rspi/: sample_rspi_cmdlist.c  sample_rspi_command.c  sample_rspi_eep.c  sample_rspi_interrupt.c  sample_rspi_main.c
src/native-rza1/common/src/samples/sample_scif_sync/: sample_scif_sync_cmdlist.c  sample_scif_sync_command.c  sample_scif_sync_interrupt.c  sample_scif_sync_main.c
src/native-rza1/gr-lychee/: pins.h  siochar.c
src/native-rza1/gr-peach/: led.c  peripheral_init_basic.c  pins.h  stb_init.c
src/native-rza1/src/: syscalls.c
src/native-rza1/src/asm/: initsect.S  irq.S  irqfiq_handler.S  l1_cache_init.S  l1_cache_operation.S  reset_handler.S  ttb_init.S  vbar_init.S  vector_mirrortable.S  vector_table.S  vfp_init_asm.S
src/native-rza1/src/inc/: irq.h  stdbool.h
