native_rza1_includes = include_directories(
    'common',
    'common/inc',
    'common/inc/iobitmasks',
    'common/inc/iodefines',
    'common/src',
    'common/src/board_settings',
    'common/src/drivers',
    'common/src/drivers/mtu2_pwm',
    'common/src/drivers/mtu2_pwm/inc',
    'common/src/drivers/mtu2_pwm/mtu2_pwm_driver',
    'common/src/drivers/mtu2_pwm/userdef',
    'common/src/drivers/ostm',
    'common/src/drivers/ostm/inc',
    'common/src/drivers/ostm/ostm_driver',
    'common/src/drivers/ostm/userdef',
    'common/src/drivers/riic',
    'common/src/drivers/riic/inc',
    'common/src/drivers/riic/riic_driver',
    'common/src/drivers/riic/userdef',
    'common/src/drivers/intc',
    'common/src/drivers/intc/inc',
    'common/src/drivers/intc/userdef',
    'common/src/drivers/intc/intc_driver',
    'common/src/drivers/bsc',
    'common/src/drivers/bsc/inc',
    'common/src/drivers/bsc/bsc_driver',
    'common/src/drivers/bsc/userdef',
    'common/src/drivers/scif_uart',
    'common/src/drivers/scif_uart/inc',
    'common/src/drivers/scif_uart/scif_uart_driver',
    'common/src/drivers/scif_uart/userdef',
    'common/src/drivers/scif_sync',
    'common/src/drivers/scif_sync/inc',
    'common/src/drivers/scif_sync/userdef',
    'common/src/drivers/scif_sync/scif_sync_driver',
    'common/src/drivers/rspi',
    'common/src/drivers/rspi/inc',
    'common/src/drivers/rspi/rspi_driver',
    'common/src/drivers/rspi/userdef',
    'common/src/drivers/flctl',
    'common/src/drivers/flctl/inc',
    'common/src/drivers/flctl/userdef',
    'common/src/drivers/flctl/flctl_driver',
    'common/src/common_settings',
    'common/src/samples',
    'common/src/samples/sample_mtu2_pwm',
    'common/src/samples/sample_riic',
    'common/src/samples/sample_rspi',
    'common/src/samples/sample_flctl',
    'common/src/samples/sample_scif_sync',
    'common/src/samples/sample_dmac',
    'common/src/samples/command',
    'src',
    'src/inc',
    'src/asm',
    '.',
)

native_rza1_sources = files(
    'common/src/board_settings/port_init.c',
    'common/src/board_settings/peripheral_init_basic.c',
    'common/src/board_settings/siochar.c',
    'common/src/board_settings/stb_init.c',
    'common/src/drivers/mtu2_pwm/mtu2_pwm_driver/mtu2_pwm1.c',
    'common/src/drivers/mtu2_pwm/userdef/mtu2_pwm1_userdef.c',
    'common/src/drivers/ostm/ostm_driver/ostm.c',
    'common/src/drivers/ostm/userdef/ostm_userdef.c',
    'common/src/drivers/riic/riic_driver/riic.c',
    'common/src/drivers/riic/userdef/riic_userdef.c',
    'common/src/drivers/riic/userdef/riic_rskrza1h.c',
    'common/src/drivers/intc/userdef/intc_userdef.c',
    'common/src/drivers/intc/intc_driver/intc_handler.c',
    'common/src/drivers/intc/intc_driver/intc.c',
    'common/src/drivers/bsc/bsc_driver/bsc.c',
    'common/src/drivers/bsc/userdef/bsc_userdef.c',
    'common/src/drivers/scif_uart/scif_uart_driver/scif_uart.c',
    'common/src/drivers/scif_uart/userdef/scif_uart_userdef.c',
    'common/src/drivers/scif_sync/userdef/scif_sync_userdef.c',
    'common/src/drivers/scif_sync/scif_sync_driver/scif_sync.c',
    'common/src/drivers/rspi/rspi_driver/rspi.c',
    'common/src/drivers/rspi/userdef/rspi_userdef.c',
    'common/src/drivers/flctl/userdef/flctl_userdef.c',
    'common/src/drivers/flctl/flctl_driver/flctl.c',
    'common/src/common_settings/l2_cache_init.c',
    'common/src/common_settings/siorw.c',
    'common/src/common_settings/cache.c',
    'common/src/common_settings/rza_io_regrw.c',
    'common/src/common_settings/resetprg.c',
    'common/src/samples/sample_main_cmdlist.c',
    'common/src/samples/sample_mtu2_pwm/sample_mtu2_pwm_main.c',
    'common/src/samples/sample_mtu2_pwm/sample_mtu2_pwm_cmdlist.c',
    'common/src/samples/sample_mtu2_pwm/sample_mtu2_pwm1_command.c',
    'common/src/samples/sample_riic/sample_riic_interrupt.c',
    'common/src/samples/sample_riic/sample_riic_command.c',
    'common/src/samples/sample_riic/sample_riic_main.c',
    'common/src/samples/sample_riic/sample_riic_cmdlist.c',
    'common/src/samples/sample_riic/sample_riic_eep.c',
    'common/src/samples/sample_rspi/sample_rspi_eep.c',
    'common/src/samples/sample_rspi/sample_rspi_command.c',
    'common/src/samples/sample_rspi/sample_rspi_cmdlist.c',
    'common/src/samples/sample_rspi/sample_rspi_interrupt.c',
    'common/src/samples/sample_rspi/sample_rspi_main.c',
    'common/src/samples/sample_flctl/sample_flctl_command.c',
    'common/src/samples/sample_flctl/sample_flctl_main.c',
    'common/src/samples/sample_flctl/sample_flctl_cmdlist.c',
    'common/src/samples/sample_scif_sync/sample_scif_sync_cmdlist.c',
    'common/src/samples/sample_scif_sync/sample_scif_sync_interrupt.c',
    'common/src/samples/sample_scif_sync/sample_scif_sync_command.c',
    'common/src/samples/sample_scif_sync/sample_scif_sync_main.c',
    'common/src/samples/sample_main.c',
    'common/src/samples/sample_dmac/sample_dmac_common.c',
    'common/src/samples/sample_dmac/sample_dmac_chext.c',
    'common/src/samples/sample_dmac/sample_dmac_command_peri_req.c',
    'common/src/samples/sample_dmac/sample_dmac_main.c',
    'common/src/samples/sample_dmac/sample_dmac_command_ext_req.c',
    'common/src/samples/sample_dmac/sample_dmac_cmdlist.c',
    'common/src/samples/sample_dmac/sample_dmac_command_auto_req.c',
    'common/src/samples/command/command_main.c',
    'src/asm/l1_cache_operation.S',
    'src/asm/initsect.S',
    'src/asm/vector_table.S',
    'src/asm/ttb_init.S',
    'src/asm/l1_cache_init.S',
    'src/asm/irqfiq_handler.S',
    'src/asm/vfp_init_asm.S',
    'src/asm/reset_handler.S',
    'src/asm/vbar_init.S',
    'src/asm/irq.S',
    'src/asm/vector_mirrortable.S',
    'src/syscalls.c',
    'src/sections.c',
    'gpio.c',
)

native_rza1_args = [
    '-mcpu=cortex-a9',
    '-mfpu=neon',
    # '-nostartfiles',
    # '-mthumb',
]

native_rza1_link_args = [
    '-mthumb',
    # '-lc',
    '-lrdimon',
    '-nostartfiles',
    # '--specs=nano.specs',
    '--specs=rdimon.specs',
    '--entry=start',
	'-L@0@'.format(meson.current_source_dir()),
	'-T@0@'.format('gr-peach.ld'),
]

native_rza1 = declare_dependency(
    include_directories: native_rza1_includes,
    sources: native_rza1_sources,
    compile_args: native_rza1_args,
    link_args: native_rza1_link_args
)